numerik.pdf checked

--- a/testat1/numerik.tex
+++ b/testat1/numerik.tex
@@ -21,6 +21,6 @@ Da es zu jeder Nullstelle $\lambda$ eines Legendre-Polynoms auch eine Nullstelle
 
 \section{Aufgabe 3c}
 
-Die Wurzelfunktion ist an der Stelle 0 nicht stetig differenzierbar, ist also keine analytische Funktion im Intervall $[0;1]$, so dass sich auch bei der Gauß-Quadratur kein exponentieller Fehlerabfall bezüglich m einstellt. Im Gegensatz dazu ist die Funktion $\frac{1}{x^2+1}$ beliebig oft differenzierter und somit analytisch, so dass nach der Fehlerabschätzung $err < C (b-a)^{m+2} \|f^{(m+1)}\|_{max}$ der Fehler exponentiell mit steigendem m abfällt.
+Die Wurzelfunktion ist an der Stelle 0 nicht stetig differenzierbar, ist also keine analytische Funktion im Intervall $[0;1]$, so dass sich auch bei der Gauß-Quadratur kein exponentieller Fehlerabfall bezüglich m einstellt. Im Gegensatz dazu ist die Funktion $\frac{1}{x^2+1}$ beliebig oft stetig differenzierbar und somit analytisch, so dass nach der Fehlerabschätzung $err < C (b-a)^{m+2} \|f^{(m+1)}\|_{\infty,[a,b]}$ der Fehler exponentiell mit steigendem m abfällt.
   
 \end{document}
