--- a/numerik-skript/numerik.tex
+++ b/numerik-skript/numerik.tex
@@ -10,6 +10,7 @@
 \author{}
 
 \renewcommand \thesection{\Roman{section}}
+\providecommand{\OO}[1]{\operatorname{O}\left(#1\right)}
 
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{lemma}[theorem]{Lemma}
