--- a/numerik-skript/numerik.tex
+++ b/numerik-skript/numerik.tex
@@ -5,6 +5,8 @@
 \usepackage{amssymb}
 \usepackage{graphicx}
 \usepackage{xcolor}
+\usepackage{algorithm}
+\usepackage{algorithmic}
 \setlength{\parindent}{0cm}
 \setlength{\parindent}{0cm}
 \author{}
@@ -61,7 +63,7 @@
   \newpage
   \input{quad}
   \newpage
-  \section{}
+  \input{eigen}
   \newpage
   \section{}
   \newpage
