eigenvalue completed, linear equations started

--- a/numerik-skript/dgl.tex
+++ b/numerik-skript/dgl.tex
@@ -1,6 +1,6 @@
 \section{Integration gewöhnlicher Differentialgleichungen}
 
-Die Behandlung \verb|•|on Differentialgleichungen spielt in der Numerik eine zentrale Rolle. Die mathematische Modellierung von zeitabhängigen Vorgängen führt vielfach auf Systeme von Differentialgleichungen (Biologie, Mechanik, Wirtschaft). Hängen die Zustandsgrößen nur von der Zeit ab, so spricht man von \emph{gewöhnlichen Differentialgleichungen}, hängen sie auch vom Ort ab, so spricht man von \emph{partiellen Differentialgleichungen}. Da die analytische Lösung meist nicht explizit berechenbar ist, ist man auf numerische Approximationen angewiesen.
+Die Behandlung von Differentialgleichungen spielt in der Numerik eine zentrale Rolle. Die mathematische Modellierung von zeitabhängigen Vorgängen führt vielfach auf Systeme von Differentialgleichungen (Biologie, Mechanik, Wirtschaft). Hängen die Zustandsgrößen nur von der Zeit ab, so spricht man von \emph{gewöhnlichen Differentialgleichungen}, hängen sie auch vom Ort ab, so spricht man von \emph{partiellen Differentialgleichungen}. Da die analytische Lösung meist nicht explizit berechenbar ist, ist man auf numerische Approximationen angewiesen.
 
 \subsection{Aufgabenstellung und einfache Einschrittverfahren}
 
