--- a/numerik-skript/eigen.tex
+++ b/numerik-skript/eigen.tex
@@ -110,3 +110,80 @@ Des Weiteren wird gefordert, dass für die ONM $V$ der EV, d.h. $A=V\Lambda V^{-
 		\item $(A_{k})_{i,i}\rightarrow \lambda_{i}$ und $(A_{k})_{i,j} \rightarrow 0$ mit $i \not = j$
 	\end{enumerate}
 \end{theorem}
+
+\begin{remark}
+	\begin{enumerate}
+		\item Die Voraussetzung $|\lambda_{n}|>0$ und die Existenz einer LU-Zerlegung von $\tilde V^{-1}$ sind nicht notwendig
+		\item QR Zerlegung funktioniert auch bei mehrfachen EW
+		\item QR Zerlegung funktioniert auch mit diagonalisierbaren Matrizen mit reellen EW. $A_{k}$  ist dann eine obere Dreiecksmatrix
+		\item Falls $\lambda_{i}=-lambda_{j}$, so gilt i.d.R, dass die QR Zerlegung nicht konvergiert.
+		\item QR Zerlegung hat den Aufwand $O(n^{3})$
+		\item Wenn die EW betragsmäßig nahe beisammen liegen, so erhält man eine langsame Konvergenz
+	\end{enumerate}
+\end{remark}
+
+\begin{definition}
+	[Definition II.1] Hessenberg-Matrix
+	\\
+	Eine Matrix $H\in \mathbb{R}^{n\times n}$ heißt Hessenberg-Matrix, falls
+	$$ H = \left(
+	\begin{array}{cccc}
+	*&*&*&*\\
+	*&\ddots&\ddots&*\\
+	0 & \ddots& \ddots & *\\
+	0 & 0 & * & *
+	\end{array}\right)\quad H_{i,j}=0 \text{ falls } i>j+1$$
+\end{definition}
+
+Mit Givens-Rotationen kann eine Hessenberg-Matrix in $(n-1)$-Schritten in QR zerlegt werden. Jeder Schrtitt kostet allg. $O(n)$ bzw. bei
+einer symmetrischen Hessenberg-Matrix $O(1)$. Damit kostet die QR Zerlegung $O(n^{2})$ bzw. $O(n)$.
+
+\begin{theorem}
+	[Satz II.4] QR-Iteration für Hessenberg Matrizen
+	\\
+	Ist $A_{0}$ eine Hessenberg-Matrix, so hat $A_{k}$, $k>0$ ebenfalls Hessenberg-Form.
+\end{theorem}
+
+\begin{theorem}
+	[Satz II.5] Jede Matrix $A$ kann durch Ähnlichkeitstransformationen mit orthonormalen Matrixen in Hssenberg-Form überführt werden.
+	Der Aufwand hierfür ist $O(n^{3})$.
+\end{theorem}
+
+\begin{algorithm}
+	\caption{QR-Iteration (mit Shift)}
+	\begin{algorithmic}
+		\STATE gegeben: $A,Q_{0}$
+		\STATE $A_{0}=Q_{0}^{T}AQ_{0}$ (Ähnlichkeitstransformation $\Rightarrow$ EW bleiben erhalten)
+		\FOR{$k=0$ to $\infty$}
+			\STATE QR-Zerlegung: $A_{k} - \mu Id =Q_{k+1}\cdot R_{k+1}$
+			\STATE $A_{k+1}=R_{k+1}\cdot Q_{k+1} + \mu Id$
+		\ENDFOR
+	\end{algorithmic}
+\end{algorithm}
+
+\begin{theorem}
+	[Satz II.6] EW bei geshifteter QR $A_{k+1}$ und $A_{k}$ sind ähnlich.
+\end{theorem}
+
+\begin{algorithm}
+	\caption{QR-Iteration (mit Shift und Deflation)}
+	\begin{algorithmic}
+		\STATE gegeben: $A\in \mathbb{R}^{n\times n }$ in Hessenberg-Form
+		\IF{n=1}
+			\STATE return $\{(A)_{n,n}\}$
+		\ELSE
+			\FOR{$k=0$ to $\infty$}
+				\STATE $\mu_{k}= (A_{k})_{n,n}$
+				\STATE QR-Zerlegung: $A_{k} - \mu Id =Q_{k+1}\cdot R_{k+1}$
+				\STATE $A_{k+1}=R_{k+1}\cdot Q_{k+1} + \mu Id$
+				\IF{$|(A_{k+1})_{n,n-1}|\leq C\cdot eps(|(A_{k+1})_{n,n}|+|(A_{k+1})_{n-1,n-1}|$}
+					\STATE return QR-Iteration($(A_{k+1})_{i,j=1,\ldots,n-1}$) $\cup \{(A_{k+1})_{n,n}\}$
+				\ENDIF
+			\ENDFOR
+		\ENDIF
+	\end{algorithmic}
+\end{algorithm}
+
+\begin{remark}
+	Der Rayleigh-Shift versagt, in dem Fall, dass EW mit $\lambda_{i}=-\lambda_{j}$ existieren. In solchen Fällen sollte der Wilkinson-Shift verwendet werden.
+\end{remark}
